--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
+  background-image: linear-gradient(90deg, #9287c2, #5f4fa8);
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -13,4 +14,49 @@ body {
   justify-content: center;
   height: 100vh;
   overflow: hidden;
+}
+
+h2 {
+  margin-left: 60px;
+}
+
+.search {
+  position: relative;
+  height: 50px;
+}
+
+.input {
+  background-color: white;
+  border: none;
+  font-size: 16px;
+  padding: 15px;
+  width: 50px;
+  height: 50px;
+  transition: width 0.5s ease-in;
+}
+
+.btn {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.5s ease-in;
+}
+
+.input:focus,
+.btn:focus {
+  outline: none;
+}
+
+.search.active .input {
+  width: 200px;
+}
+
+.search.active .btn {
+  transform: translateX(198px);
 }
